[package]
name = "tapciify-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["multipart"] }
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
shuttle-axum = "0.34"
shuttle-runtime = "0.34"
tapciify = { version = "2", default-features = false }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4", features = ["cors"] }
tracing = "0.1"
urlencoding = "2"
